# xprez-crm.api

./: .env.example  .gitignore  README.md  alembic.ini  cypress.ci.yml  cypress.config.js  package copy.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: cypress.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: routes.py  (+3 more)
app/core/: __init__.py  config.py  database.py  migrate.py
app/models/: __init__.py  base.py  contact.py  customer.py
app/routers/: __init__.py  contact.py  customer.py
app/schemas/: __init__.py  contact.py  customer.py
bruno-api-xprez-crm/: Create CUSTOMER without script.bru  Delete Customer.bru  GET CUSTOMER without script 404.bru  GET CUSTOMER without script.bru  Get Customer.bru  List of Customer.bru  Update Customer.bru  bruno.json  collection.bru
crm/: Create New Customer.bru  Customer Lifecycle Test.bru  Delete Customer.bru  Get Customer.bru  Update Customer.bru  bruno.json  collection.bru
cypress/e2e/: addCustomerDbCommand.cy.js  api-meant-to-fail-but-will-skip.cy.js  api-supposed-to-fail-but-will-skip.cy.js  api.cy.js  apiInsertCustomer.cy.js  createCustomer.cy copy.js  createCustomer.cy.js  customerLifecycleFlow.cy.js  customerLifecycleInlineData.cy.js  databaseInsertCustomer.cy.js  emailAlreadyExists.cy.js  individualCustomerTest.cy.js  injectNewCustomerInDB.cy.js
cypress/fixtures/: contact.json  createNewCustomer.json  customer-create.json  customer.json
migrations/: env.py
scripts/: __init__.py  migrate.py  seed_customer.py
tests/: __init__.py  test_health.py
(+14 files in other folders)
